// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge Component (Diamond Standard) > should render children and match snapshot for default variant 1`] = `
<DocumentFragment>
  <span
    class="inline-flex items-center justify-center rounded-lg font-black uppercase tracking-widest border gap-1.5 bg-white/90 text-stone-900 border-stone-200 backdrop-blur-sm px-2 py-1 text-[8px] "
  >
    Yeni
  </span>
</DocumentFragment>
`;

exports[`Badge Component (Diamond Standard) > should render correctly with different variants and sizes 1`] = `
<DocumentFragment>
  <span
    class="inline-flex items-center justify-center rounded-lg font-black uppercase tracking-widest border gap-1.5 bg-emerald-500 text-white border-emerald-600 shadow-lg shadow-emerald-500/10 px-3 py-1.5 text-[10px] "
  >
    Tamamlandı
  </span>
</DocumentFragment>
`;

exports[`Badge Component (Diamond Standard) > should render correctly with different variants and sizes 2`] = `
<DocumentFragment>
  <span
    class="inline-flex items-center justify-center rounded-lg font-black uppercase tracking-widest border gap-1.5 bg-red-500 text-white border-red-600 shadow-lg shadow-red-500/20 px-2.5 py-1 text-[9px] "
  >
    Hata
  </span>
</DocumentFragment>
`;
